--- a/index.html
+++ b/index.html
@@ -10,37 +10,137 @@
   html, body, #map {height: 100%; width: 100%;}
 </style>
 </head>
-<body>
+<body onload="init_map()">
 <div id="map"></div>
 <script>
-var map = new ol.Map({
-  target: "map",
-  renderer: ['canvas', 'dom'],
-  layers: [
-    new ol.layer.Tile({
-      source: new ol.source.XYZ({
-        attributions: [
-          new ol.Attribution({
-            html: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
-          })
-        ],
-        url: "https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png",
-        projection: "EPSG:3857"
-      })
-    })
-  ],
-  controls: ol.control.defaults({
-    attributionOptions: ({
-      collapsible: false
-    })
-  }),
-  view: new ol.View({
-    projection: "EPSG:3857",
-    center: ol.proj.transform([138.7313889, 35.3622222], "EPSG:4326", "EPSG:3857"),
-    maxZoom: 18,
-    zoom: 5
-    })
-});
+        var debug_flg = true;
+        var gsi_layer;
+        var gsj_layer;
+        var osm_layer;
+        var map;
+        var view;
+        var initZoom = 15; // ズームの初期値
+        var MinZoom  = 6;   // ズームの最小値（最も広い範囲）
+        var MaxZoom  = 17;  // ズームの最大値（最も狭い範囲）
+
+        var lineVector = null;                             // vector layer variable
+        var vectorSource = null;                           // variable for source
+        var vectorFeature = null;                          // variable for feature
+        var lineStrings = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArray = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+        var coordArray = new Array();                      // line data array [pt0, pt1, pt2,...], eath point is pt0=[lon0,lat0]
+        var lineColorRED = '#ff0000'; // red
+
+        var lineVectorOLD = null;                             // vector layer variable
+        var vectorSourceOLD = null;                           // variable for source
+        var vectorFeatureOLD = null;                          // variable for feature
+        var lineStringsOLD = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayOLD = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+        var coordArrayOLD = new Array();                      // line data array [pt0, pt1, pt2,...], eath point is pt0=[lon0,lat0]
+        var lineColorGREEN = '#00ff00'; // green
+
+        var lineVectorPHONE0 = null;                             // vector layer variable
+        var vectorSourcePHONE0 = null;                           // variable for source
+        var vectorFeaturePHONE0 = null;                          // variable for feature
+        var lineStringsPHONE0 = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayPHONE0 = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+
+        var lineVectorPHONE1 = null;                             // vector layer variable
+        var vectorSourcePHONE1 = null;                           // variable for source
+        var vectorFeaturePHONE1 = null;                          // variable for feature
+        var lineStringsPHONE1 = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayPHONE1 = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+
+        var lineVectorPHONE2 = null;                             // vector layer variable
+        var vectorSourcePHONE2 = null;                           // variable for source
+        var vectorFeaturePHONE2 = null;                          // variable for feature
+        var lineStringsPHONE2 = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayPHONE2 = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+
+        var lineVectorPHONE3 = null;                             // vector layer variable
+        var vectorSourcePHONE3 = null;                           // variable for source
+        var vectorFeaturePHONE3 = null;                          // variable for feature
+        var lineStringsPHONE3 = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayPHONE3 = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+
+        var lineVectorPHONE4 = null;                             // vector layer variable
+        var vectorSourcePHONE4 = null;                           // variable for source
+        var vectorFeaturePHONE4 = null;                          // variable for feature
+        var lineStringsPHONE4 = new ol.geom.MultiLineString([]); // line instance of the path
+        var lineStrArrayPHONE4 = new Array();                    // line data array as lineString format [[pt0,pt1],[pt1,pt2],[pt2,pt3],....]
+
+        var coordArrayPHONE = new Array();                      // line data array [pt0, pt1, pt2,...], eath point is pt0=[lon0,lat0]
+//        var lineColorBLUE0 = '#800080'; // purple
+        var lineColorBLUE0 = '#ff0000'; // red
+        var lineColorBLUE1 = '#00ffff'; // cyan
+        var lineColorBLUE2 = '#00ced1'; // darkturquoise
+        var lineColorBLUE3 = '#008080'; // treal
+        var lineColorBLUE4 = '#0000ff'; // blue
+
+    function init_map(){
+        view = new ol.View({ projection: "EPSG:3857",
+            zoom: initZoom,
+            maxZoom: MaxZoom,
+            minZoom: MinZoom
+        })
+
+        // 地理院地図
+        gsi_layer = new ol.layer.Tile({
+            source: new ol.source.XYZ({
+            attributions: [
+                new ol.Attribution({
+                html: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院地図</a>"
+                })
+            ],
+            url: "https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png",
+            projection: "EPSG:3857"
+            })
+        });
+
+    // 産総研地質図
+        gsj_layer = new ol.layer.Tile({
+            opacity: 0.7,
+            source: new ol.source.XYZ({
+            attributions: [
+                new ol.Attribution({
+                html: "<a href='https://gbank.gsj.jp/seamless/v2/api/1.2/legend.html' target='_blank'>産総研シームレス地質図</a>"
+                })
+            ],
+            url: "https://gbank.gsj.jp/seamless/v2/api/1.2/tiles/{z}/{y}/{x}.png",
+            projection: "EPSG:3857"
+            })
+        });
+
+    // 傾斜図
+        gsk_layer = new ol.layer.Tile({
+            opacity: 0.6,
+            source: new ol.source.XYZ({
+            attributions: [
+                new ol.Attribution({
+                html: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院傾斜地図</a>"
+                })
+            ],
+            url: "https://cyberjapandata.gsi.go.jp/xyz/slopemap/{z}/{x}/{y}.png",
+            projection: "EPSG:3857"
+            })
+        });
+
+    // Open Street Map
+        osm_layer = new ol.layer.Tile({
+            opacity: 0.6,
+            source: new ol.source.OSM()
+        });
+
+        map = new ol.Map({
+            layers: [gsi_layer],
+            target: document.getElementById('map'),
+            view: view,
+            renderer: ['canvas', 'dom'],
+            controls: ol.control.defaults().extend([new ol.control.ScaleLine()]),
+            interactions: ol.interaction.defaults()
+        });
+
+    }
 </script>
 </body>
 </html>
